# VentureForge-Intelligence-Engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-24-ai-research-stack-v1.md
docs/superpowers/specs/: 2026-05-24-ai-research-stack-design.md
scripts/: run_api.py
src/ai_research_stack/: __init__.py  agents.py  api.py  budget.py  cli.py  config.py  dashboard.py  domain.py  embeddings.py  models.py  orchestrator.py  postgres.py  prompts.py  providers.py  repository.py  results.py  scheduler.py  schema.sql  scoring.py  slack.py  slack_actions.py  slack_socket_mode.py  source_ingestion.py  sources.py  tasks.py  worker.py
tests/: test_api.py  test_orchestrator.py  test_paid_data_connectors.py  test_prompts_models.py  test_result_processing.py  test_scheduler.py  test_scoring_budget.py  test_slack.py  test_slack_actions.py  test_slack_notifications.py  test_slack_socket_mode.py  test_source_ingestion.py  test_tasks.py
