[project]
name = "ai-research-stack"
version = "0.1.0"
description = "Agentic AI research stack for frontier opportunity discovery and demand-witness scoring."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]
embeddings = [
  "fastembed>=0.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
